Updates to Server/Client/miscellaneous